--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
     "build:web": "expo export --platform web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "clsx": "^2.0.0",
-    "expo": "^54.0.7",
-    "expo-constants": "~15.4.0",
-    "expo-haptics": "~12.8.1",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-linking": "~6.2.2",
-    "expo-notifications": "^0.32.11",
-    "expo-router": "^3.5.24",
-    "expo-status-bar": "~1.11.1",
+    "expo": "54.0.15",
+    "expo-constants": "~18.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.12",
+    "expo-router": "~6.0.13",
+    "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.544.0",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "^0.73.11",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
-    "react-native-web": "^0.19.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
