--- a/app.json
+++ b/app.json
@@ -16,7 +16,15 @@
       "package": "com.auspowercell.valvescontrol"
     },
     "web": {
-      "bundler": "metro"
+      "bundler": "metro",
+      "head": {
+        "link": [
+          {
+            "rel": "stylesheet",
+            "href": "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+          }
+        ]
+      }
     },
     "plugins": [
       "expo-router"
