--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "build:web": "expo export --platform web"
   },
   "dependencies": {
+    "@hugeicons/core-free-icons": "^1.2.1",
+    "@hugeicons/react-native": "^1.0.7",
     "@react-native-async-storage/async-storage": "2.2.0",
     "clsx": "^2.0.0",
-    "expo": "54.0.15",
+    "expo": "54.0.17",
     "expo-constants": "~18.0.9",
     "expo-haptics": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.13",
+    "expo-splash-screen": "^0.27.7",
     "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.544.0",
     "nativewind": "^2.0.11",
@@ -28,8 +31,10 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.12.1",
     "react-native-web": "^0.21.0",
+    "react-native-worklets": "^0.5.1",
+    "react-native-worklets-core": "^1.6.2",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
